04_K8s/08_ingress/books-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-deployment
  namespace: school-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books-api
  template:
    metadata:
      labels:
        app: books-api
    spec:
      containers:
        - name: books-api
          image: archety/books-api-in-memory:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
