04_K8s/08_ingress/books-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: books-service
  namespace: school-ns
spec:
  selector:
    app: books-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
