04_K8s/08_ingress/students-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: students-service
  namespace: school-ns
spec:
  selector:
    app: students-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
