04_K8s/08_ingress/ingress-school.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: school-ingress
  namespace: school-ns
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /api/students
          pathType: Prefix
          backend:
            service:
              name: students-service
              port:
                number: 80
        - path: /api/books
          pathType: Prefix
          backend:
            service:
              name: books-service
              port:
                number: 80
